Bug fix: Mobile menu not collapsing on route click

--- a/src/index.scss
+++ b/src/index.scss
@@ -259,6 +259,15 @@ html,
     text-align: left !important;
   }
 
+  .planet-btn:hover {
+    background-color: #419EBB;
+  }
+  
+
+  .btn-primary:hover {
+    background-color: none !important;
+  }
+
   .btn-group {
     display: none !important;
   }
